# django-joinfield

./: .travis.yml  LICENSE  Readme.rst  pyproject.toml  runtests.py  setup.py
.github/workflows/: mysql_test.yml  postgres_test.yml  sqlite_test.yml
joinfield/: joinfield.py
joinfield/tests/: models.py  test.py  test_mysql_settings.py  test_postgres_settings.py  test_sqlite_settings.py
